--- a/Project01_Portfolio/pages/interests.html
+++ b/Project01_Portfolio/pages/interests.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="/style/styles.css">
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -19,16 +19,20 @@
     </nav>
 
     <header class="other-headers">
-      <h1 class="tag main">Experience</h1>
+      <h1 class="tag main">Interests</h1>
     </header>
 
-    <main class="flex"> 
+    <main class="flex">
 
       <section class="card">
-        <h3 class="card-text-1">What you see <em>is</em> my experience!</h3>
-        <p>The Treehouse Techdegree is my first introduction to front end web development which means this is my first project!</p>
-        <p>While I've only just begun learning web dev, I've also dabbled in 3D design and animation with <u>Blender</u> and have even tried my hand at the basics of game development using <u>Unreal Engine 4</u>. Most of that work can be seen on my ArtStation and Instagram accounts.</p>
-      </section> 
+        <h2 class="card-text-1">Gamin'</h2>
+          <p>In the interest of keeping this page short, here is a short list of the video games in my current rotation.</p>
+          <div class="flex">
+            <img src="../images/factorio_img.jpg" alt="Factorio" class="game-img">
+            <img src="../images/frostpunk_img.jpg" alt="Frostpunk" class="game-img">
+            <img src="../images/HLL_img.jpg" alt="Hell Let Loose" class="game-img">
+          </div>
+      </section>
 
     </main>
     <footer>
