--- a/Project01_Portfolio/pages/experience.html
+++ b/Project01_Portfolio/pages/experience.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Experience</title>
   <link rel="stylesheet" href="/style/styles.css">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,9 +35,9 @@
     <footer>
       <ul>
       
-        <li><a href="https://github.com/SkeetersDevJourney/Project01" target="_blank" class="social git">Github</a></li>
-        <li><a href="https://zachs_devjourney.artstation.com" target="_blank" class="social artstation">ArtStation</a></li>
-        <li><a href="https://www.instagram.com/zachs_devjourney" target="_blank" class="social insta">ArtStation</a></li>
+        <li><a href="https://github.com/SkeetersDevJourney" target="_blank" class="social git" title="GitHub">Github</a></li>
+        <li><a href="https://zachs_devjourney.artstation.com" target="_blank" class="social artstation" title="ArtStation">ArtStation</a></li>
+        <li><a href="https://www.instagram.com/zachs_devjourney" target="_blank" class="social insta" title="Instagram">Instagram</a></li>
         
       </ul>
       <p class="copyright">&copy; 2022, Zacharie McGee</p>
