Tag/ Class Name Revisions

--- a/Project01_Portfolio/pages/experience.html
+++ b/Project01_Portfolio/pages/experience.html
@@ -9,8 +9,8 @@
 </head>
   <body>
 
-    <nav class="main-nav">
-      <ul class="nav">
+    <nav class="nav-bar">
+      <ul class="nav-list">
         <li class="name">Zacharie McGee</li>
         <li><a href="../pages/index.html">Home</a></li>
         <li><a href="../pages/experience.html">Experience</a></li>
@@ -24,7 +24,7 @@
 
     <main class="flex"> 
 
-      <section class="card">
+      <section class="flexcard">
         <h3 class="card-text-1">What you see <em>is</em> my experience!</h3>
         <p>The Treehouse Techdegree is my first introduction to front end web development which means this is my first project!</p>
         <p>While I've only just begun learning web dev, I've also dabbled in 3D design and animation with <u>Blender</u> and have even tried my hand at the basics of game development using <u>Unreal Engine 4</u>. Most of that work can be seen on my ArtStation and Instagram accounts.</p>
