--- a/Project01_Portfolio/pages/interests.html
+++ b/Project01_Portfolio/pages/interests.html
@@ -9,8 +9,8 @@
 </head>
   <body>
 
-    <nav class="main-nav">
-      <ul class="nav">
+    <nav class="nav-bar">
+      <ul class="nav-list">
         <li class="name">Zacharie McGee</li>
         <li><a href="../pages/index.html">Home</a></li>
         <li><a href="../pages/experience.html">Experience</a></li>
@@ -24,7 +24,7 @@
 
     <main class="flex">
 
-      <section class="card">
+      <section class="flexcard">
         <h2 class="card-text-1">Gamin'</h2>
           <p>In the interest of keeping this page short, here is a short list of the video games in my current rotation.</p>
           <div class="flex">
