--- a/Project01_Portfolio/pages/index.html
+++ b/Project01_Portfolio/pages/index.html
@@ -8,8 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <nav class="main-nav">
-        <ul class="nav">
+    <nav class="nav-bar">
+        <ul class="nav-list">
           <li class="name">Zacharie McGee</li>
           <li><a href="../pages/index.html">Home</a></li>
           <li><a href="../pages/experience.html">Experience</a></li>
@@ -25,16 +25,16 @@
 
     <main class="flex">
 
-      <section class="card">
+      <section class="flexcard">
         <h2 class="card-title">Background</h2>
         <p>I am an aspiring software engineer currently endeavering into the world of front end website development.</p>
         <p>I've graduated university (although with nothing related to software engineering, <em>but don't tell anyone that</em>) and have worked a variety of jobs. I have now, however, come to the realization that the time has come to venture onward.</p>
       </section> 
 
-      <section class="card">
+      <section class="flexcard">
         <h2 class="card-title">Goals</h2>
         <p>In my <em>perpetual</em> pursuit of passion and learning, I now wish to master the skills of web development. I am currently making strides in my knowledge and abilities in:</p>
-        <ul class="skills">
+        <ul class="skill-list">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
