--- a/pages/interests.html
+++ b/pages/interests.html
@@ -12,9 +12,9 @@
     <nav class="nav-bar">
       <ul class="nav-list">
         <li class="name">Zacharie McGee</li>
-        <li><a href="../pages/index.html">Home</a></li>
-        <li><a href="../pages/experience.html">Experience</a></li>
-        <li><a href="../pages/interests.html">Interests</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/pages/experience.html">Experience</a></li>
+        <li><a href="/pages/interests.html">Interests</a></li>
       </ul>
     </nav>
 
